tests/invalid/type_pack_to_static_array_not_supported.wio
fn Bad<Ts...>() -> i32 {
    let values = Ts.array.ToStaticArray<i32>();
    return values[0usize];
}

fn Entry() -> i32 {
    return 0;
}
